# pop2net

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  about.html  developers.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  section_examples.html  section_introduction.html  tox.ini
.github/workflows/: bump_version.yml  docs_pages.yml  formatter.yml  release.yml  tox.yml
Introduction/: actors_from_surveys.html  actors_from_surveys.ipynb  framework_integration.html  framework_integration.ipynb  inspector.html  inspector.ipynb  introduction_basics.html  introduction_basics.ipynb  introduction_creator.html  introduction_creator.ipynb  introduction_inspector.html  introduction_inspector.ipynb  introduction_simulations.html  introduction_simulations.ipynb  network_export.html  network_export.ipynb  new_structure_intro.html  new_structure_intro.ipynb
_misc/: run_sim_in_different_frameworks.html  run_sim_in_different_frameworks.ipynb  test_creator_with_framworks.html  test_creator_with_framworks.ipynb
_modules/: index.html
_modules/pop2net/: actor.html  agent.html  creator.html  environment.html  inspector.html  location.html  location_designer.html  model.html  utils.html
_sources/: developers.rst.txt  section_introduction.rst.txt
_sources/Introduction/: inspector.ipynb.txt  introduction_basics.ipynb.txt  introduction_creator.ipynb.txt  introduction_inspector.ipynb.txt  introduction_simulations.ipynb.txt  network_export.ipynb.txt  new_structure_intro.ipynb.txt
_sources/api/: actor.rst.txt  agent.rst.txt  environment.rst.txt  index.rst.txt  location.rst.txt  model.rst.txt  utils.rst.txt
_sources/examples/: example_barbell.ipynb.txt  example_caveman_graph.ipynb.txt  example_cycle.ipynb.txt  example_fully_connected_graph.ipynb.txt  example_line.ipynb.txt  example_lollipop.ipynb.txt  example_opinion_cluster.ipynb.txt  example_smallworld.ipynb.txt  wealth_transfer.ipynb.txt
api/: actor.html  agent.html  creator.html  environment.html  index.html  inspector.html  location.html  location_designer.html  magiclocation.html  model.html  popmaker.html  utils.html
docs/: about.rst  conf.py  developers.rst  index.rst  installation.rst  introduction.ipynb  introduction_1_basics.ipynb  introduction_new_structure.ipynb  new_structure_intro.ipynb  section_examples.rst  section_introduction.rst  test_bokehgraph.ipynb
docs/Introduction/: actors_from_surveys.ipynb  example_school_data.csv  framework_integration.ipynb  inspector.ipynb  introduction_basics.ipynb  introduction_creator.ipynb  introduction_creator_broken.ipynb  introduction_inspector.ipynb  introduction_simulations.ipynb  network_export.ipynb  new_structure_intro.ipynb
docs/_misc/: run_sim_in_different_frameworks.ipynb  test_creator_with_framworks.ipynb
docs/_misc_/: run_sim_in_different_frameworks.ipynb
docs/_static/: custom.css
docs/api/: agent.rst  creator.rst  environment.rst  index.rst  inspector.rst  location.rst  location_designer.rst  magiclocation.rst  model.rst  popmaker.rst  utils.rst
docs/examples/: example_barbell.ipynb  example_caveman_graph.ipynb  example_cycle.ipynb  example_fully_connected_graph.ipynb  example_grid.ipynb  example_line.ipynb  example_lollipop.ipynb  example_nx_cycle.ipynb  example_nx_smallworld.ipynb  example_opinion_cluster.ipynb  example_simple_contact_network_survey_data.ipynb  example_smallworld.ipynb  example_socialmedia.ipynb  index.rst  infection_simulation.ipynb  introduction new.ipynb  introduction old.ipynb  introduction.ipynb  introduction_revert.ipynb  introduction_static_networks.ipynb  minimal_example.ipynb  opinion_dynamics.ipynb  real_data.ipynb  schelling.ipynb  wealth_transfer.ipynb
docs/max_docs/: testscript.py
examples/: example_barbell.html  example_barbell.ipynb  example_caveman_graph.html  example_caveman_graph.ipynb  example_cycle.html  example_cycle.ipynb  example_fully_connected_graph.html  example_fully_connected_graph.ipynb  example_grid.html  example_grid.ipynb  example_line.html  example_line.ipynb  example_lollipop.html  example_lollipop.ipynb  example_opinion_cluster.html  example_opinion_cluster.ipynb  example_simple_contact_network_survey_data.html  example_simple_contact_network_survey_data.ipynb  example_smallworld.html  example_smallworld.ipynb  infection_simulation.html  infection_simulation.ipynb  minimal_example.html  opinion_dynamics.html  opinion_dynamics.ipynb  real_data.html  real_data.ipynb  schelling.html  schelling.ipynb  wealth_transfer.html  wealth_transfer.ipynb
misc/: notizen_besprechung_maerz_2023.txt
paper/: example_code.ipynb  example_data.csv  example_paper.md  flowchart.odp  paper.bib  paper.md  review.md
paper/utils/: example_code.ipynb  example_data.csv  flowchart.odp  network_plots.pptx
src/: __init__.py  agent.py  exceptions.py  location.py  model.py  pop_maker.py  reader.py  sequences.py
src/data_fakers/: soep_faker.py
src/fakers/: soep.py
src/pop2net/: __init__.py  actor.py  agent.py  creator.py  entity_list.py  environment.py  exceptions.py  inspector.py  location.py  location_designer.py  model.py  reader.py  sequences.py  utils.py
src/popy/: __init__.py  agent.py  creator.py  environment.py  exceptions.py  inspector.py  location.py  max_utils.py  model.py  pop_maker.py  (+3 more)
tests/: conftest.py  new_strucuture.ipynb  test_affiliation_tracking.py  test_agent.py  test_agent_connect_and_disconnect.py  test_agent_neighbors.py  test_agent_shared_locations.py  test_creator_get_affiliated_agents.py  test_data_faker.py  test_frameworks.py  test_location.py  test_location_bridge.py  test_location_filter.py  test_location_melt.py  test_location_nest.py  test_location_nest_marius.py  test_location_nx_graph.py  test_location_refine.py  test_location_size.py  test_location_split.py  test_location_stick_together.py  test_location_weight.py  test_model.py  test_model_agents_and_locations_by_id.py  test_pop_maker.py  test_reader.py  test_sequences.py  test_weighting.py  test_weighting_during_sim.py  todo_list_test_combinations.txt
(+159 files in other folders)
