[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
exclude = ["docs"]

[tool.poetry]
name = "popy"
version = "0.1.0"
packages = [{include = "popy", from="src/"}]
description = "Creates representative random populations for simulation studies"
authors = [
  "Marius Kaffai <marius.kaffai@sowi.uni-stuttgart.de>",
  "Lukas Erhard <lukas.erhard@sowi.uni-stuttgart.de>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8,<4.0"
pandas = "^1.5.1"
agentpy = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
faker = "^15.1.1"
pytest-regressions = "^2.4.1"

[tool.poetry.group.mypy.dependencies]
tox = "^3.27.0"

[tool.poetry.group.docs.dependencies]
ipython = "^8.7.0"
sphinx = "^5.3.0"
ipykernel = "^6.17.1"
seaborn = "^0.12.1"
ipywidgets = "^8.0.2"
sphinx-rtd-theme = "^1.1.1"
nbsphinx = "^0.8.10"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
fix = true
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
select = [
"ARG", # flake8-unused-arguments
"B", # flake8-bugbear
"C4", #flake8-comprehensions
"COM", #flake8-commas
"D", # pydocstyle
"E", # pycodestyle
"EM", # flake8-errmsg
"F", # pyflakes
"I", # isort
"N", # pep8-naming
"PT", #flake8-pytest-style
"PTH", # flake8-use-pathlib
"Q", # flake8-quotes
"UP", # pyupgrade
]
target-version = "py38"
line-length = 100
ignore-init-module-imports = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"docs/**" = ["D"]
"tests/**" = ["D"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
