[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
exclude = ["docs"]

[tool.poetry]
name = "pop2net"
version = "1.0.1"
packages = [{include = "pop2net", from="src/"}]
description = "Pop2net is a Python package designed to generate and manage relations between agents in agent-based models in a simple and flexible way."
authors = [
  "Marius Kaffai <marius.kaffai@sowi.uni-stuttgart.de>",
  "Lukas Erhard <lukas.erhard@sowi.uni-stuttgart.de>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = [{version = ">=1.7", python = "<=3.12"}, {version = ">=1.26", python = ">=3.12"}]
scipy = [{version = ">=1.6", python = "<=3.12"}, {version = ">=1.11.3", python = ">=3.12"}]
pandas = ">=1.5.1"
tabulate = "^0.9.0"
seaborn = "^0.12.1"
faker = "^15.1.1"
bokehgraph = "^1.1.0"
mesa = "^3.1.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.0"
pre-commit = "^2.20.0"
pytest-regressions = ">=2.4.1"
ipython = "^8.7.0"
ipykernel = "^6.17.1"
mesa = "^3.0.0"
agentpy = "^0.1.5"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.0"
ipywidgets = "^8.0.2"
sphinx-rtd-theme = "^1.1.1"
nbsphinx = "^0.9.3"
sphinx-autodoc-typehints = "^1.24.0"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
fix = true
unsafe-fixes = true
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "ARG", # flake8-unused-arguments
  "B", # flake8-bugbear
  "C4", #flake8-comprehensions
  "COM", #flake8-commas
  "D", # pydocstyle
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "F", # pyflakes
  "I", # isort
  "N", # pep8-naming
  "PT", #flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "Q", # flake8-quotes
  "UP", # pyupgrade
]
ignore = [
  "COM812", # missing trailing comma, conflicts with formatter
  "F401", # unused-import, is re-selected explicitly in gh-actions
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"docs/**" = [
  "ARG002",
  "B018",
  "D",
  "E402",
  "F811",
]
"tests/**" = ["D", "ARG002", "PT009"]
"docs/examples/introduction old.ipynb" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
known-first-party = ["src", "pop2net"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
